gitops/apps/mon-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-app
  labels:
    app: mon-app
spec:
  selector:
    app: mon-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
